# Geant4_CountingParticles

./: CMakeLists.txt  README.md  gui.mac  main.cc  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  Left_Plate_Hit.hh  Left_Plate_SD.hh  Particles_Left.hh  Particles_Right.hh  PrimaryGeneratorAction.hh  Right_Plate_Hit.hh  Right_Plate_SD.hh  RunAction.hh
macros/: Histogram_Energy_RightPlate.cc  Results_Common.cc  Results_LeftPlate.cc  Results_RightPlate.cc  batch_mode_macro.mac  root_helper.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Left_Plate_Hit.cc  Left_Plate_SD.cc  Particles_Left.cc  Particles_Right.cc  PrimaryGeneratorAction.cc  Right_Plate_Hit.cc  Right_Plate_SD.cc  RunAction.cc
